--- a/third.html
+++ b/third.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     Hello this is the third page
+    I am adding another line to the thing
+    Hello this is the third line of this file
 </body>
 </html>
